@@ -550,8 +550,13 @@ public class DataResolver extends ResponseResolver
                 // we do not apply short read protection when we have no limits at all
                 assert !command.limits().isUnlimited();
 
-                // if the returned partition doesn't have enough rows to satisfy even the original limit, don't ask for more
-                if (!singleResultCounter.isDoneForPartition())
+                /*
+                 * If the returned partition doesn't have enough rows to satisfy even the original limit, don't ask for more.
+                 *
+                 * Can only take the short cut if there is no per partition limit set. Otherwise it's possible to hit false
+                 * positives due to some rows being uncounted for in certain scenarios (see CASSANDRA-13911).
+                 */
+                if (!singleResultCounter.isDoneForPartition() && command.limits().perPartitionCount() == DataLimits.NO_LIMIT)
                     return null;
 
                 /*
